--- a/movie/pom.xml
+++ b/movie/pom.xml
@@ -114,6 +114,16 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+		 <plugin>
+		  <groupId>org.apache.maven.plugins</groupId>
+		  <artifactId>maven-compiler-plugin</artifactId>
+		  <version>3.11.0</version>
+		  <configuration>
+		   <compilerArgs>
+		    <arg>--enable-preview</arg>
+		   </compilerArgs>
+		  </configuration>
+		 </plugin>
 		</plugins>
 	</build>
 	<repositories>
