--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=movie
 
-spring.datasource.url=jdbc:mysql://localhost:3306/MovieBooking
+spring.datasource.url=jdbc:mysql://localhost:3306/bookmyshow
 spring.datasource.username=root
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -10,3 +10,8 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 server.port=5000
+# For Flyway
+spring.flyway.enabled=true
+
+# For Liquibase
+spring.liquibase.enabled=true
