--- a/movie/src/main/resources/application.properties
+++ b/movie/src/main/resources/application.properties
@@ -8,7 +8,8 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA/Hibernate configuration
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=5000
 # For Flyway
 spring.flyway.enabled=true
