--- a/authentication/src/main/resources/application.properties
+++ b/authentication/src/main/resources/application.properties
@@ -1,1 +1,19 @@
 spring.application.name=authentication
+
+
+spring.datasource.url=jdbc:mysql://localhost:3306/bookmyshow
+spring.datasource.username=root
+spring.datasource.password=
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# JPA/Hibernate configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+server.port=5001
+# For Flyway
+spring.flyway.enabled=true
+
+# For Liquibase
+spring.liquibase.enabled=true
