--- a/authorization/src/main/resources/application.properties
+++ b/authorization/src/main/resources/application.properties
@@ -1,4 +1,6 @@
-spring.application.name=authentication
+spring.application.name=authorization
+
+
 
 spring.datasource.url=jdbc:mysql://localhost:3306/bookmyshow
 spring.datasource.username=root
@@ -10,7 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-server.port=5001
+server.port=5002
 # For Flyway
 spring.flyway.enabled=true
 
